@@ -34,6 +34,7 @@ Additions
 * Variable renaming can overwrite old variables that have already been
   instantiated.
 * The clear tactic can also remove instantiated variables.
+* The settable option "types" displays the types of variables in subgoals
 
 Internal changes
 
